--- a/package.json
+++ b/package.json
@@ -25,13 +25,22 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/lodash": "^4.17.0",
     "ioredis": "^5.3.2",
     "joiful": "^3.0.2",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
+    "pg": "^8.11.4",
+    "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1",
+    "wechaty": "^1.20.2",
+    "wechaty-puppet-wechat": "^1.18.4",
+    "wechaty-puppet-wechat4u": "^1.14.14",
+    "wechaty-puppet-xp": "^1.12.7",
     "yaml": "^2.4.1"
   },
   "devDependencies": {
@@ -42,6 +51,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
