feat: Trigger workflow on message

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "nest start --watch --debug 0.0.0.0:9239",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/lodash": "^4.17.0",
+    "axios": "^1.6.8",
     "ioredis": "^5.3.2",
     "joiful": "^3.0.2",
     "lodash": "^4.17.21",
@@ -38,6 +39,7 @@
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1",
     "wechaty": "^1.20.2",
+    "wechaty-puppet": "^1.20.2",
     "wechaty-puppet-wechat": "^1.18.4",
     "wechaty-puppet-wechat4u": "^1.14.14",
     "wechaty-puppet-xp": "^1.12.7",
